# memopt-transformer-runtime

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
scripts/: bench_accuracy.py  bench_latency.py  bench_latency_v2.py  bench_memory.py  bench_memory_v2.py  bench_needle_haystack.py  plot_results.py  run_ablations.py
src/csrc/: attention.cu  attention.h  extension.cpp  kv_cache.cu  kv_cache.h  quantization.cu  quantization.h
src/memopt/: __init__.py  attention.py  models.py  scheduler.py  triton_attention.py
tests/: test_attention.py  test_import.py  test_quant.py
