[build-system]
# torch is NOT listed here — importing it during pip's build-requirements
# phase triggers CUDA device queries that SIGSEGV in WSL2 environments.
# torch is a runtime dependency only (see [project] dependencies below).
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memopt"
version = "0.1.0"
description = "Dynamic Memory Optimization for Transformer Inference"
authors = [
    {name = "Daniel Ferreto", email = "ldanielfch@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.black]
line-length = 100
target-version = ["py312"]
